Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,166 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет магазина «Девайс»">
+        </a>
+        <form action="#" method="post">
+          <input type="search" name="search" id="search" placeholder="Поиск по сайту">
+        </form>
+        <ul>
+          <li><a href="#">Войти</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Каталог товаров</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section> <!--Cлайды-->
+          <img src="https://via.placeholder.com/384x486" width="384" height="486" alt="Селфи палка">
+        <article>
+          <p>01</p>
+          <h2>Делай селфи, как Бен Стиллер!</h2>
+          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+        <button type="button">Подробнее</button>
+          <ul>
+           <li><button type="button">•</button></li>
+           <li><button type="button">•</button></li>
+            <li><button type="button">•</button></li>
+          </ul>
+          <table>
+            <tr>
+              <td>8,5 м</td>
+             <td>5 кг</td>
+             <td>Карбон</td>
+           </tr>
+            <tr>
+              <td>Длина палки</td>
+              <td>Вес палки</td>
+              <td>Материал</td>
+            </tr>
+          </table>
+         </article>
+      </section>
+      <article> <!--Популярные категории товаров-->
+        <ul>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Виртуальная реальность">
+              <p>Виртуальная реальность</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Моноподы для селфи">
+              <p>Моноподы для селфи</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Экшн-камеры">
+              <p>Экшн-камеры</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Фитнес-браслеты">
+              <p>Фитнес-браслеты</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Умные часы">
+              <p>Умные часы</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Квадрокоптеры">
+              <p>Квадрокоптеры</p>
+            </a>
+          </li>
+        </ul>
+      </article>
+      <section> <!--Сервис-->
+        <div>
+            <ul>
+             <li><h3><a href="#">Доставка</a></h3></li>
+             <li><h3><a href="#">Гарантия</a></h3></li>
+             <li><h3><a href="#">Кредит</a></h3></li>
+            </ul>
+        </div>
+        <div>
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему 
+            подъезду совершенно бесплатно! Ведь мы неплохо 
+            заработаем, поднимая его на ваш этаж.</p>
+        </div>
+      </section>
+      <aside>
+        <ul>
+          <li><img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Logo Dji"></li>
+          <li><img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Logo SP Gadgets"></li>
+          <li><img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Logo GoPro"></li>
+          <li><img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Logo Vive"></li>
+        </ul>
+      </aside>
+      <section>
+        <article>
+          <h2>О нас</h2>
+          <p>Огромный выбор гаджетов не оставит равнодушным гика, 
+            который есть в каждом из нас.</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки 
+            России! DEVICE работает со многими транспортными компаниями:</p>
+          <ul>
+            <li><a href="#">Деловые линии</a></li>
+            <li><a href="#">Автотрейдинг</a></li>
+            <li><a href="#">ЖелДорЭкспедиция</a></li>
+          </ul>
+          <button type="button">Подробнее о нас</button>
+        </article>
+        <article>
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Карта">
+          <button type="button">Напишите нам</button>
+      </article>
+      </section>
+    </main>
+    <footer>
+        <section>
+          <a>
+            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет магазина «Девайс»">
+          </a>
+          <p>г. Москва, ул. Строителей, 15</p>
+        </section>
+        <section>
+          <ul>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Гарантия</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Фейсбук</a></li>
+            <li><a href="#">Инстаграм</a></li>
+            <li><a href="#">Твиттер</a></li>
+          </ul>
+        </section>
+        <section>
+          <ul>
+            <li><a href="#">Войти</a></li>
+            <li><a href="#">Сравнить</a></li>
+            <li><a href="#">Корзина</a></li>
+          </ul>
+          <p> Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a></p>
+        </section>
+    </footer>
   </body>
 </html>
