Разметка внутренней страницы

--- a/index.html
+++ b/index.html
@@ -58,37 +58,37 @@
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Виртуальная реальность">
-              <p>Виртуальная реальность</p>
+              <h3>Виртуальная реальность</h3>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Моноподы для селфи">
-              <p>Моноподы для селфи</p>
+              <h3>Моноподы для селфи</h3>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Экшн-камеры">
-              <p>Экшн-камеры</p>
+              <h3>Экшн-камеры</h3>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Фитнес-браслеты">
-              <p>Фитнес-браслеты</p>
+              <h3>Фитнес-браслеты</h3>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Умные часы">
-              <p>Умные часы</p>
+              <h3>Умные часы</h3>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="https://via.placeholder.com/160x160" width="160" height="160" alt="Квадрокоптеры">
-              <p>Квадрокоптеры</p>
+              <h3>Квадрокоптеры</h3>
             </a>
           </li>
         </ul>
@@ -164,6 +164,9 @@
             <li><a href="#">Корзина</a></li>
           </ul>
           <p> Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a></p>
+          <p>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Разработано в Html Academ"></a>
+          </p>
         </section>
     </footer>
   </body>
