Графика всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -3,30 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icons/icon_device.svg" type="image/svg+×ml">
+    <link rel="apple-touch-icon" href="img/icons/icon_device.svg">
   </head>
   <body>
     <header>
-      <nav>
-        <a>
-          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет магазина «Девайс»">
-        </a>
-        <form action="#" method="post">
-          <input type="search" name="search" id="search" placeholder="Поиск по сайту">
-        </form>
-        <ul>
-          <li><a href="#">Войти</a></li>
-          <li><a href="#">Сравнить</a></li>
-          <li><a href="#">Корзина</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Каталог товаров</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <a>
+            <img src="img/logo-device.png" width="163" height="35" alt="Интернет магазина «Девайс»">
+          </a>
+          <form action="#" method="post">
+            <input type="search" name="search" id="search" placeholder="Поиск по сайту">
+          </form>
+          <ul>
+            <li><a>Валентин Петухов</a></li>
+            <li><a href="#">Выйти</a></li>
+            <li><a href="#">Сравнить</a></li>
+            <li><a href="#">Корзина</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Каталог товаров</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
     </header>
-    <main>
+    <main>  
         <h1>Моноподы для селфи</h1>
         <ul>
             <li><a href="index.html">Главная</a></li>
@@ -95,7 +99,7 @@
                 <ul>
                     <li>
                         <p>
-                            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+                            <img src="img/product_1.jpg" width="360" height="380" alt="Любительская селфи-палка">
                         </p>
                         <p>
                             <button type="button">В корзину</button>
@@ -106,7 +110,7 @@
                     </li>
                     <li>
                         <p>
-                            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
+                            <img src="img/product_2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                         </p>
                         <p>
                             <button type="button">В корзину</button>
@@ -117,7 +121,7 @@
                     </li>
                     <li>
                         <p>
-                            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+                            <img src="img/product_3.png" width="360" height="380" alt="Непотопляемая селфи-палка">
                         </p>
                         <p>
                             <button type="button">В корзину</button>
@@ -128,7 +132,7 @@
                     </li>
                     <li>
                         <p>
-                            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                            <img src="img/product_4.png" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                         </p>
                         <p>
                             <button type="button">В корзину</button>
@@ -159,31 +163,32 @@
     <footer>
         <section>
           <a>
-            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет магазина «Девайс»">
+            <img src="img/logo-device2.png" width="163" height="35" alt="Интернет магазина «Девайс»">
           </a>
           <p>г. Москва, ул. Строителей, 15</p>
         </section>
         <section>
           <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <ul>
-            <li><a href="#">Фейсбук</a></li>
-            <li><a href="#">Инстаграм</a></li>
-            <li><a href="#">Твиттер</a></li>
+            <li><a href="#"><img src="img/icons/icon-facebook.svg" width="32" height="32" alt="Facebook"></a></li>
+            <li><a href="#"><img src="img/icons/icon-instagram.svg" width="32" height="32" alt="Instagram"></a></li>
+            <li><a href="#"><img src="img/icons/icon-twitter.svg"  width="32" height="32" alt="Twitter"></a></li>
           </ul>
         </section>
         <section>
-          <ul>
-            <li><a href="#">Войти</a></li>
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
-          </ul>
+            <ul>
+                <li><a>Валентин Петухов</a></li>
+                <li><a href="#">Выйти</a></li>
+                <li><a href="#">Сравнить</a></li>
+                <li><a href="#">Корзина</a></li>
+              </ul>
           <p> Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a></p>
           <p>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Разработано в Html Academ"></a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="27" height="34" alt="Разработано в Html Academ"></a>
           </p>
         </section>
     </footer>
